--- a/pages/index/applyDetail/applyDetail.wxml
+++ b/pages/index/applyDetail/applyDetail.wxml
@@ -45,5 +45,5 @@
 
 
 
-<!--<template  is="cell-cancel" data="{{data}}">
-</template>-->
+<template  wx:if="{{willCancel}}"  is="cell-cancel" data="{{data}}">
+</template>
