--- a/pages/index/pended/pended.wxml
+++ b/pages/index/pended/pended.wxml
@@ -4,7 +4,7 @@
      <view class="main-cell" wx:for="{{data}}">
       <template is="cell-body" data="{{item}}"> </template>
       <template is="cell-attach" wx:if="{{item.C3_545927244809 == 'Y'}}" data="{{item}}"></template>
-      <template is="cell-detail" data="{{item}}"></template>
+      <template is="cell-detail" data="{{index}}"></template>
       <template is="bottom-line"></template>
    </view>
 </template>
