--- a/pages/verify/unverify/unverify.wxml
+++ b/pages/verify/unverify/unverify.wxml
@@ -3,12 +3,12 @@
 <import src="../common.wxml" />
 <template name="unverify">
   <view class="main-cell" wx:for="{{data}}">
-    <template is="cell-body" data="{{item}}"> </template>
+    <template is="cell-body" data="{{item,index}}"> </template>
 
 
     <template wx:if="{{(!(item.item.C3_541449606438=='Y')&&item.item.C3_541449538456=='Y') && item.item.C3_545927244809 == 'Y' }}" is="cell-attach" data="{{item}}"></template>
     
-    <template is="cell-refuse" data="{{item}}"></template>
+    <template is="cell-refuse" data="{{index}}"></template>
     <!--<template is="cell-checkbox" data="{{index}}"></template>-->
 <!--<template is="cell-checkbox" data="{{index}}"></template>-->
 
