修复审批中不显示员工姓名的bug

--- a/pages/index/applyDetail/applyDetail.wxml
+++ b/pages/index/applyDetail/applyDetail.wxml
@@ -1,5 +1,8 @@
 <import src='/pages/index/common.wxml' />
 
+<template wx:if="{{willRefuse}}" is="person-name-readonly" data="{{data}}">
+</template>
+
 <template is="add-category-readonly" data="{{data}}">
 </template>
 
